按钮的几种监听方式

--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -16,4 +16,13 @@
             android:layout_marginTop="78dp" android:layout_marginEnd="86dp" android:layout_marginRight="86dp"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="300dp"/>
+
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:id="@+id/btn_test_onclicklistener" android:text="测试按钮"
+            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="148dp"
+            android:layout_marginRight="148dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="252dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="148dp"
+            android:layout_marginStart="148dp"/>
+
 </android.support.constraint.ConstraintLayout>
