--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,14 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="200dp"
             android:layout_marginEnd="148dp" android:layout_marginRight="148dp"
             app:layout_constraintEnd_toEndOf="parent" tools:text="tr" android:onClick="sendMessage"/>
+
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:id="@+id/btn_one" android:text="按钮1"
+            android:onClick="click_btn_one"
+            android:layout_marginTop="23dp"
+            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginEnd="148dp"
+            android:layout_marginRight="148dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="148dp"
+            android:layout_marginStart="148dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="129dp"/>
 </android.support.constraint.ConstraintLayout>
