--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -25,4 +25,37 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="148dp"
             android:layout_marginStart="148dp"/>
 
+    <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content"
+                android:id="@+id/radio_button_group_one"
+                android:layout_marginEnd="158dp" android:layout_marginRight="158dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="148dp"
+                android:layout_marginStart="148dp" app:layout_constraintStart_toEndOf="@+id/textview_sexual"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="14dp"
+                app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintVertical_bias="0.0">
+        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
+                     android:id="@+id/radio_button_one" android:text="man"/>
+        <RadioButton android:layout_width="wrap_content" android:layout_height="wrap_content"
+                     android:id="@+id/radio_button_two" android:text="women"/>
+
+    </RadioGroup>
+
+    <TextView android:layout_width="134dp" android:layout_height="wrap_content"
+              android:id="@+id/textview_sexual" android:textSize="30dp"
+              android:layout_marginTop="58dp"
+              app:layout_constraintTop_toBottomOf="@+id/btn_test_onclicklistener" android:layout_marginEnd="125dp"
+              android:layout_marginRight="125dp" app:layout_constraintEnd_toEndOf="parent"
+              android:layout_marginBottom="30dp" app:layout_constraintBottom_toTopOf="@+id/button_openbrowser"
+              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="125dp"
+              android:layout_marginStart="125dp"/>
+
+    <Button android:layout_width="125dp" android:layout_height="wrap_content"
+            android:id="@+id/button_openbrowser"
+            android:text="打开浏览器"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/textview_sexual" android:layout_marginEnd="133dp"
+            android:layout_marginRight="133dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="75dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="126dp"
+            android:layout_marginStart="126dp"/>
 </android.support.constraint.ConstraintLayout>
