--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,12 @@
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="148dp"
             android:layout_marginStart="148dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="129dp"/>
+    <Button android:layout_width="109dp" android:layout_height="51dp"
+            android:id="@+id/button_to_signin"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/btn_one" android:layout_marginEnd="137dp"
+            android:layout_marginRight="137dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="46dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="138dp"
+            android:layout_marginStart="138dp"/>
 </android.support.constraint.ConstraintLayout>
