--- a/app/src/main/res/layout/activity_display_message.xml
+++ b/app/src/main/res/layout/activity_display_message.xml
@@ -53,9 +53,17 @@
             android:id="@+id/button_openbrowser"
             android:text="打开浏览器"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/textview_sexual" android:layout_marginEnd="133dp"
-            android:layout_marginRight="133dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textview_sexual"
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="75dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="126dp"
-            android:layout_marginStart="126dp"/>
+            tools:layout_editor_absoluteX="16dp" tools:ignore="MissingConstraints"/>
+
+    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:id="@+id/btn_toListView"
+            android:text="open清单"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/textview_sexual" android:layout_marginEnd="135dp"
+            android:layout_marginRight="135dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="65dp"
+            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
+            app:layout_constraintStart_toEndOf="@+id/button_openbrowser"/>
 </android.support.constraint.ConstraintLayout>
